fixed bottom margin on mobile navigation

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -6,7 +6,7 @@ nav {
 	padding-bottom: 0;
 	clear: both;
 	position: relative;
-	margin-bottom: 0.5em;
+	margin-bottom: 0;
 	box-shadow: 0px 4px 6px $black;
 	z-index: 2;
 
